manifests/applications/goodegang-com/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/match-tag: 'true'
    keel.sh/policy: force
    keel.sh/trigger: poll
  name: web
  namespace: goodegang-com
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/bakseter/goodegang.com:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-tmp
              mountPath: /tmp/nginx
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
      volumes:
        - name: nginx-tmp
          emptyDir: {}
      securityContext:
        fsGroup: 1001
        runAsGroup: 1001
        runAsUser: 1001
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
          - 1001
