manifests/applications/goodegang-com/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: goodegang-com
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: web
  type: ClusterIP
